--- a/project1/course-starting-project/package.json
+++ b/project1/course-starting-project/package.json
@@ -15,5 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.5.4"
+  },
+  "dependencies": {
+    "three": "^0.145.0"
   }
 }
